--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,12 +6,30 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>217</width>
-    <height>265</height>
+    <width>205</width>
+    <height>262</height>
    </rect>
   </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>205</width>
+    <height>262</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>205</width>
+    <height>262</height>
+   </size>
+  </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Логін</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -72,7 +90,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>217</width>
+     <width>205</width>
      <height>22</height>
     </rect>
    </property>
